...
        loadReservationData();
        setupActions();
    }

    private void initViews() {
        backButton = findViewById(R.id.backButton);
        eventTitle = findViewById(R.id.eventTitle);
        eventOrganizer = findViewById(R.id.eventOrganizer);
        ticketStatus = findViewById(R.id.ticketStatus);
        eventDateFull = findViewById(R.id.eventDateFull);
        eventTime = findViewById(R.id.eventTime);
        eventLocation = findViewById(R.id.eventLocation);
        eventCategory = findViewById(R.id.eventCategory);



        viewEventButton = findViewById(R.id.viewEventButton);
        cancelReservationButton = findViewById(R.id.cancelReservationButton);
    }

    private void loadReservationData() {
        if (event == null) return;

        eventTitle.setText(event.name);
...
