...
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Registered Events"
                        android:textColor="#1E1E1E"
                        android:textSize="30sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <View
...
                android:text="Upcoming"
                android:textColor="#101A63"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                android:clipToPadding="false" />
        </LinearLayout>
...
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foregroundGravity="center">

                <ImageView
                    android:id="@+id/navManageEvents"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_manage_events"
                    android:contentDescription="Manage Events"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
...
