...
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Update event details"
                android:textColor="#1E1E1E"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
...
                android:textStyle="bold"
                android:textSize="16sp"
                android:backgroundTint="#4A5AE8"
                app:cornerRadius="18dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelEventButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="28dp"
                android:text="Cancel Event"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
...
