...

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Find your next event."
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="#4A5AE8"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
...
