...

    private void initViews() {
        navHome = findViewById(R.id.navHome);
        navTickets = findViewById(R.id.navTickets);
        navProfile = findViewById(R.id.navProfile);
        navManageEvents = findViewById(R.id.navManageEvents);
        searchIcon = findViewById(R.id.searchIcon);
        profileImage = findViewById(R.id.profileImage);

        eventCard1 = findViewById(R.id.eventCard1);
        eventCard2 = findViewById(R.id.eventCard2);

        chipAll = findViewById(R.id.chipAll);
...
