...
                    android:layout_height="1dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="My Ticket"
                    android:textColor="#4A5AE8"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!-- Main ticket card -->
...
