...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/dateFilterCard"
                    android:layout_width="0dp"
                    android:layout_height="76dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="6dp"
                    app:cardCornerRadius="18dp"
...
                                android:layout_height="wrap_content"
                                android:text="Date"
                                android:textColor="#777777"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/dateFilterText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="Any day"
                                android:textColor="#1E1E1E"
                                android:textSize="14sp"
...

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <Button
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#101A63"
                android:text="Search"/>

            <HorizontalScrollView
...


            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                android:paddingBottom="100dp"
                android:clipToPadding="false" />
...
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foregroundGravity="center">

                <ImageView
                    android:id="@+id/navHome"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_home_white"
                    android:contentDescription="Home" />
            </FrameLayout>
...
