...
        initViews();
        setupLivePreview();
        setupActions();
    }

    private void initViews() {
        backButton = findViewById(R.id.backButton);

        cardPreviewNumber = findViewById(R.id.cardPreviewNumber);
        cardPreviewName = findViewById(R.id.cardPreviewName);
        cardPreviewExpiry = findViewById(R.id.cardPreviewExpiry);

        cardholderNameEditText = findViewById(R.id.cardholderNameEditText);
...
                cardPreviewNumber.setText(formatCardPreviewNumber(s));
            }
        }));

        expiryDateEditText.addTextChangedListener(simpleWatcher(s -> {
            if (s.isEmpty()) {
                cardPreviewExpiry.setText("08/28");
            } else {
                cardPreviewExpiry.setText(s);
            }
        }));
    }

...
