appId: com.example.soen345
---
- launchApp

# Go to login page
- tapOn:
    id: "loginMainButton"

# Login
- tapOn:
    id: "loginUsername"
- inputText: "sara"

- tapOn:
    id: "loginPassword"
- inputText: "123456"

- tapOn:
    id: "loginButton"

- tapOn:
    id: "navTickets"

- assertVisible: "Registered Events"

- tapOn:
    id: "rvEvents"

- tapOn:
    id: "cancelReservationButton"

- assertVisible: "Are you sure?"

- scrollUntilVisible:
    element:
      id: "cancelReasonAutoComplete"
    direction: DOWN

- tapOn:
    id: "cancelReasonAutoComplete"

- assertVisible:
    text: "Other"

- tapOn:
    text: "Other"

- tapOn:
    id: "confirmCancelButton"

- assertVisible: "Registered Events"
