appId: com.example.soen345
---
- launchApp

# Go to login page
- tapOn:
    id: "loginMainButton"

# Login
- tapOn:
    id: "loginUsername"
- inputText: "sara"

- tapOn:
    id: "loginPassword"
- inputText: "123456"

- tapOn:
    id: "loginButton"

- tapOn:
    id: "seeAllText"

# Verify search page opened
- assertVisible:
    id: "rvEvents"

- tapOn:
    id: "rvEvents"

- tapOn:
    id: "reserveButton"

- assertVisible: "Complete your reservation"

- scrollUntilVisible:
    element:
      id: "ticketTypeAutoComplete"
    direction: DOWN

- tapOn:
    id: "ticketTypeAutoComplete"

- assertVisible:
    text: "VIP"

- tapOn:
    text: "VIP"

- tapOn:
    id: "confirmReservationButton"

- assertVisible: "Registered Events"
