appId: com.example.soen345
---
- launchApp

# Go to login page
- tapOn:
    id: "loginMainButton"

# Login
- tapOn:
    id: "loginUsername"
- inputText: "sara"

- tapOn:
    id: "loginPassword"
- inputText: "123456"

- tapOn:
    id: "loginButton"

- tapOn:
    id: "navTickets"

# Verify search page opened
- assertVisible:
    id: "rvEvents"

- tapOn:
    id: "rvEvents"

- assertVisible:
   text: "My Ticket"

