appId: com.example.soen345
---
- launchApp

# Go to login page
- tapOn:
    id: "loginMainButton"

# Login
- tapOn:
    id: "loginUsername"
- inputText: "sara"

- tapOn:
    id: "loginPassword"
- inputText: "123456"

- tapOn:
    id: "loginButton"

# Open search screen
- tapOn:
    id: "searchIcon"

# Verify search page opened
- assertVisible:
    id: "dateFilterCard"

# Enter search term
- tapOn:
    id: "dateFilterText"

- tapOn: "Previous month"

# 3. Select the 28th
- tapOn: "28"

# 4. Confirm the selection
- tapOn: "OK"

# Open first search result
- tapOn:
    id: "btn_search"

# Verify event details page opened
- assertVisible:
    id: "rvEvents"

- tapOn:
    id: "rvEvents"

- tapOn:
    id: "backButton"

- tapOn:
    id:  "navHome"